fixed overflow issue in the css

--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,10 @@ p.subtitle.is-3.hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(img/laptopWhite.jpg);
   background-size: cover;
-  /* height: 100vh; */
+  height: 100%;
   background-position: center;
+  overflow: hidden;
+  overflow: scroll;
 }
 
 #containerProjects {
